--- a/assets/404.html
+++ b/assets/404.html
@@ -11,7 +11,7 @@ redirect_from:
 
 {% include lang.html %}
 
-<p class="lead">{{ site.data.locales[lang].not_found.statement } But no rush. Stay a while.}</p>
+<p class="lead">{{ site.data.locales[lang].not_found.statement }} But no rush. Stay a while.</p>
 
 <div id="game-container" style="border-radius: 25px"></div>
 
